--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,18 @@
 a, a:link, a:visited{text-decoration: none;color:#000;}
 .bg-theme-blue{background:#002E5B!important;}
 .text-theme-blue {color: #002E5B!important;}
-.bg-theme-red{background: #F21B51!important; }
+.bg-theme-red{background: #F21B51!important;}
 .text-theme-red {color: #F21B51!important;}
 .text-center.h1-heading:before{position: absolute;content:" ";width: 120px;height: 3px;background:#002E5B!important;bottom: -16px;left:50%;transform: translateX(-50%);}
 .text-center.h1-heading:after{position: absolute;content:" ";width: 80px;height: 3px;background:#002E5B!important;bottom: -24px;left:50%;transform: translateX(-50%);}
 .text-center.text-theme-red.h1-heading:before{position: absolute;content:" ";width: 120px;height: 3px;background:#F21B51!important;bottom: -16px;left:50%;transform: translateX(-50%);}
 .text-center.text-theme-red.h1-heading:after{position: absolute;content:" ";width: 80px;height: 3px;background:#F21B51!important;bottom: -24px;left:50%;transform: translateX(-50%);}
+
+.text-start.h1-heading:before{position: absolute;content:" ";width: 120px;height: 3px;background:#002E5B!important;bottom: -16px;left:0;}
+.text-start.h1-heading:after{position: absolute;content:" ";width: 80px;height: 3px;background:#002E5B!important;bottom:-24px;left:0;}
+.text-start.text-theme-red.h1-heading:before{position: absolute;content:" ";width: 120px;height: 3px;background:#F21B51!important;bottom: -16px;left:0;}
+.text-start.text-theme-red.h1-heading:after{position: absolute;content:" ";width: 80px;height: 3px;background:#F21B51!important;bottom: -24px;left:0;}
+
 header{top:-164px;z-index:55;}
 header .widget{color: #fff;}
 header .widget i{font-size:40px !important;}
@@ -23,9 +29,9 @@ header .widget .text-black{font-size:16px !important;}
 .home-slider .owl-theme .owl-dots{display: none;}
 header .bottom .navbar-dark .navbar-nav .nav-link{color: #fff;}
 header .bottom .navbar-expand-sm .navbar-nav .nav-link {padding-right: 1.5rem; padding-left: 1.5rem;}
-.about-school p{font-size:20px;}
-.about-school p::before{content:"";background: url(../images/quotes.svg)no-repeat center center;position: absolute;width:33.4px;height: 21.6px;left:-30px}
-.about-school p::after{content:"";background: url(../images/quotes-2.svg)no-repeat center center;position: absolute;width:33.4px;height: 21.6px;}
+.about-school p{font-size:20px;margin: 0;text-indent: 2rem;text-align: justify;}
+.about-school p.quotes:before{content:"";background: url(../images/quotes.svg)no-repeat center center;position: absolute;width:33.4px;height: 21.6px;left:0px}
+.about-school p.quotes:after{content:"";background: url(../images/quotes-2.svg)no-repeat center center;position: absolute;width:33.4px;height: 21.6px;}
 
 .gallery figure img{object-fit: cover;}
 footer{background: rgb(21 32 41);}
